--- a/implementations/esrgan/cpp/CMakeLists.txt
+++ b/implementations/esrgan/cpp/CMakeLists.txt
@@ -11,9 +11,11 @@ add_definitions(${OPENCV_CFLAGS_OTHER})
 # include directories for ONNX Runtime headers
 include_directories(/usr/local/include)
 
+find_package(Threads REQUIRED)
+
 # link directories for ONNX Runtime library
 link_directories(/usr/local/lib)
 
 add_executable(esrgan esrgan.cpp)
-target_link_libraries(esrgan "${OpenCV_LIBS}" "${TORCH_LIBRARIES}" onnxruntime)
+target_link_libraries(esrgan "${OpenCV_LIBS}" "${TORCH_LIBRARIES}" onnxruntime Threads::Threads)
 set_property(TARGET esrgan PROPERTY CXX_STANDARD 14)
